# sentinel

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: android-build.yml  deploy-web.yml
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: main.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: config.rs  event_builder.rs  event_parser.rs  geohash_util.rs  lib.rs  wasm.rs
spec/: SPEC.md
