[package]
name = "sentinel-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "tsify-next", "console_error_panic_hook"]

[dependencies]
nostr = { version = "0.37", default-features = false, features = ["std", "nip44"] }
geohash = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# WASM-only
wasm-bindgen = { version = "0.2", optional = true }
tsify-next = { version = "0.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
nostr = { version = "0.37", features = ["std", "nip44"] }
